# FootySim-backend

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.dev.yml  docker-compose.yml  pyproject.toml  requirements.txt  tun_py.py
.github/workflows/: cd-docker.yml  ci.yml
src/app/: main.py
src/app/api/v1/: routes_matches.py  routes_players.py  routes_seasons.py  routes_table.py
src/app/core/: config.py  db.py
